--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 apex==0.1
 fairseq==0.10.0
-faiss==1.5.3
+# faiss==1.5.3, For me this didnt work. I installed it from GitHub facebook/faiss 
 matplotlib==3.5.1
 numpy==1.20.3
 Pillow==9.1.1
@@ -8,6 +8,7 @@ scikit-learn==1.1.1
 scipy==1.6.3
 seaborn==0.11.1
 SoundFile==0.10.3.post1
-torch==1.10.0
-torchvision==0.9.0
+# torch==1.10.0
+# torchvision==0.11.0
+# This didn't work. I used: pip install torch==1.10.0+cu111 torchvision==0.11.0+cu111 torchaudio==0.10.0 -f https://download.pytorch.org/whl/torch_stable.html
 tqdm==4.60.0
